Add registration success message to login form

--- a/issue_tracker/templates/main_sidebar.html
+++ b/issue_tracker/templates/main_sidebar.html
@@ -6,7 +6,7 @@
                 <img src="{{ url_for('static', filename='img/avatar.png')}}" class="img-circle" alt="User Image"></div>
             <div class="pull-left info">
                 <p>{{ g.user['forename'] +' '+ g.user['surname'] }}</p>
-                <a href="#"> <i class="fa fa-circle text-success"></i>
+                <a href="#"> <i class="fa fa-circle text-success" style="color: #00ff04;"></i>
                     Online
                 </a>
             </div>
