--- a/issue_tracker/templates/login.html
+++ b/issue_tracker/templates/login.html
@@ -14,6 +14,13 @@
             {% for error in errors %}{{ error }}{% endfor %}
         </div>
         {% endif %}
+        {% if get_flashed_messages() %}
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4><i class="icon fa fa-check"></i> Awesome!</h4>
+            {% for message in get_flashed_messages() %}{{ message }}<br/>{% endfor %}
+        </div>
+        {% endif %}
         <form action="{{ url_for('login') }}" method=post>
             <div class="form-group has-feedback">
                 <input type="email" name="email" class="form-control" placeholder="Email" value="{{ request.form['email'] }}" required />
