Fix socket message flashing on page load

--- a/issue_tracker/templates/layout.html
+++ b/issue_tracker/templates/layout.html
@@ -39,8 +39,8 @@
             $('.socket-message').children('.text').html(data);
             $('.socket-message').slideDown();
         });
-        $(document).ready(function(){
-            $('.socket-message').hide();
-        });
+        // $(document).ready(function(){
+        //     $('.socket-message').hide();
+        // });
     </script>
 </body>
