--- a/issue_tracker/templates/header.html
+++ b/issue_tracker/templates/header.html
@@ -53,7 +53,7 @@
                             <img src="{{ url_for('static', filename='img/avatar.png')}}"g" class="img-circle" alt="User Image">
 
                             <p>
-                                {{ g.user['forename'] +' '+ g.user['surname'] }} - Web Developer
+                                {{ g.user['forename'] +' '+ g.user['surname'] }}
                                 <small>Member since Nov. 2016</small>
                             </p>
                         </li>
