--- a/issue_tracker/templates/edit_user.html
+++ b/issue_tracker/templates/edit_user.html
@@ -1,41 +1,56 @@
 {% extends "layout.html" %}
 {% block body %}
-<h2>Edit User</h2>
-{% for error in errors %}<p class=error><strong>Error:</strong> {{ error }}{% endfor %}
-<form action="{{ url_for('edit_user', user_id=user['user_id']) }}" method=post>
-    <div>
-        <div>
-            <label>Forename:<input type="text" name="forename" value="{{ user['forename'] or request.form['forename'] }}"></label>
-        </div>
-        <div>
-            <label>Surname:<input type="text" name="surname" value="{{ user['surname'] or request.form['surname'] }}"></label>
-        </div>
-        <div>
-            <label>Email:<input type="text" name="email" value="{{ user['email'] or request.form['email'] }}"></label>
-        </div>
-       <!--  <div>
-            <label>Change Password:<input type="password" name="password" value="{{ request.form['password'] }}"></label>
-        </div>
-        <div>
-            <label>Confirm New Password:<input type="password" name="confirm_password" value="{{ request.form['confirm_password'] }}"></label>
-        </div> -->
-        <div>
-            <label for="user_level">User Level</label>
-            <select name="user_level">
-                <option value=""></option>
-                {% for user_level in user_levels %}
-                    {% if user_level.user_level_id == user['user_level'] %}
-                        <option value="{{ user_level.user_level_id }}" selected>{{ user_level.user_level_name }}</option>
-                    {% else %}
-                        <option value="{{ user_level.user_level_id }}">{{ user_level.user_level_name }}</option>
-                    {% endif %}
-                {% endfor %}
-            </select>
+<section class="content-header">
+    <h1>
+        Edit User
+    </h1>
+</section>
+<section class="content">
+    <div class="row">
+        <div class="col-md-6">
+            {% if errors %}
+            <div class="alert alert-danger alert-dismissible">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                <h4><i class="icon fa fa-ban"></i> Error!</h4>
+                {% for error in errors %}{{ error }}<br/>{% endfor %}
+            </div>
+            {% endif %}
+            <div class="box box-info">
+                <form action="{{ url_for('edit_user', user_id=user['user_id']) }}" method=post>
+                    <div class="box-body">
+                        <div class="form-group">
+                            <label>Forename</label>
+                            <input type="text" name="forename" value="{{ user['forename'] or request.form['forename'] }}" class="form-control"/>
+                        </div>
+                        <div class="form-group">
+                            <label>Surname</label>
+                            <input type="text" name="surname" value="{{ user['surname'] or request.form['surname'] }}" class="form-control"/>
+                        </div>
+                        <div class="form-group">
+                            <label>Email</label>
+                            <input type="text" name="email" value="{{ user['email'] or request.form['email'] }}" class="form-control"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="user_level">User Level</label>
+                            <select name="user_level" class="form-control">
+                                <option value=""></option>
+                                {% for user_level in user_levels %}
+                                    {% if user_level.user_level_id == user['user_level'] %}
+                                        <option value="{{ user_level.user_level_id }}" selected>{{ user_level.user_level_name }}</option>
+                                    {% else %}
+                                        <option value="{{ user_level.user_level_id }}">{{ user_level.user_level_name }}</option>
+                                    {% endif %}
+                                {% endfor %}
+                            </select>
 
-        </div>
-        <div>
-            <input type=submit value="Edit User">
+                        </div>
+                        <div class="box-footer">
+                            <button type="submit" class="btn btn-info btn-md pull-right">Update User</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</form>
+</section>
 {% endblock %}
