--- a/issue_tracker/templates/header.html
+++ b/issue_tracker/templates/header.html
@@ -16,31 +16,7 @@
                 <li class="dropdown notifications-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-bell-o"></i>
-                        <!-- <span class="label label-warning">10</span> -->
                     </a>
-                    <ul class="dropdown-menu">
-                        <li class="header">You have 10 notifications</li>
-                        <li>
-                            <!-- inner menu: contains the actual data -->
-                            <ul class="menu">
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-users text-aqua"></i>
-                                        5 new members joined today
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-users text-red"></i>
-                                        5 new members joined
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="footer">
-                            <a href="#">View all</a>
-                        </li>
-                    </ul>
                 </li>
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -53,7 +29,7 @@
                             <img src="{{ url_for('static', filename='img/avatar.png')}}"g" class="img-circle" alt="User Image">
 
                             <p>
-                                {{ g.user['forename'] +' '+ g.user['surname'] }} - Web Developer
+                                {{ g.user['forename'] +' '+ g.user['surname'] }}
                                 <small>Member since Nov. 2016</small>
                             </p>
                         </li>
