Finish trying to format date
 *TODO: Find out how to use moment.js for better formatting

--- a/issue_tracker/templates/layout.html
+++ b/issue_tracker/templates/layout.html
@@ -29,6 +29,7 @@
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+    {{ moment.include_moment() }}
     <script type="text/javascript" charset="utf-8">
         var socket = io.connect('http://' + document.domain + ':' + location.port);
         var userID = {{ g.user['user_id'] }}
